[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobluehq-bench"
version = "0.1.0"
description = "Process-integrity benchmark — knowing when it is wrong, not being right more"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "MOBLUEHQ LLC" }]
keywords = ["benchmark", "process-integrity", "calibration", "hallucination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.7",
    "PyNaCl>=1.5",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
bench = "mobluehq_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mobluehq_bench"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "data"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
